# taxi_analysis

./: README.md  main.ipynb  main.py  pyproject.toml  pyrightconfig.json  web_app.py
pages/: home_page.py  predict_classification_page.py  predict_regression_page.py
