[project]
name = "taxi-analysis"
version = "0.1.0"
description = "In this Data Analysis/Machine Learning project I play with the New York Taxi dataset."
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "matplotlib>=3.10.6",
    "numpy>=2.3.2",
    "pandas>=2.3.2",
    "scikit-learn>=1.7.1",
    "streamlit>=1.49.1",
]

[tool.pyright]
typeCheckingMode = "basic"

[dependency-groups]
dev = [
    "ipykernel>=6.30.1",
]
